force-app/main/default/objects/Billing_Information_form_entry__c/Billing_Information_form_entry__c.object-meta.xml
<CustomObject>
    <label>Billing Information form entry</label>
    <nameField>
        <displayFormat>BIF - {0}</displayFormat>
        <label>Billing Information form entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Information form entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>