force-app/main/default/objects/Billing_Information_form_entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Information form entries</relationshipLabel>
    <relationshipName>Billing_Information_form_entries</relationshipName>
    <type>Lookup</type>
</CustomField>