force-app/main/default/objects/Billing_Information_form_entry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing Information form entries</relationshipLabel>
    <relationshipName>Billing_Information_form_entries</relationshipName>
    <type>Lookup</type>
</CustomField>