force-app/main/default/objects/Billing_Information_form_entry__c/fields/Instructions_and_Login_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Instructions_and_Login_Credentials__c</fullName>
    <label>Instructions and Login Credentials</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>