force-app/main/default/objects/Billing_Information_form_entry__c/fields/Need_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Need_PO_Number__c</fullName>
    <label>Need PO Number?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>