force-app/main/default/objects/Billing_Information_form_entry__c/fields/Portal_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_URL__c</fullName>
    <label>Portal URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>